# web-portal

./: .dockerignore  .env.test  .git-blame-ignore-revs  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTION.md  Dockerfile  POC-gps-732-maplibre-geojson-styling.md  README.md  base.vite.config.ts  codecov.yml  docker-compose.yml  nuxt.config.ts  package.json  playwright.config.ci.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.new.ts  prettier.config.old.ts  prettier.config.ts  renovate.json  stylePreset.js  turbo.json  vite-plugin-primevue-tailwind.ts  vitest.config.ts
.github/workflows/: e2e.yml  preview-link.yml  test.yml
app/components/: IconButton.vue  LogoPic.vue  SideBar.vue
app/layouts/: default.vue
app/pages/: index.vue  map.vue
app/plugins/: addRoutes.ts  skeleton-package.ts
app/stores/: content.ts  interface.ts
docs/adr/: 0001-sourcemap-and-minification-strategy.md  README.md
e2e/: example.spec.ts  map.spec.ts
oar-stub-generator/: README.md  db.json  harvest_db.json  layersConfig_en.json  mapserverlayers_en.json  ogc-api-records.json  pyproject.toml  records.py
ogc-records/: OSM-Bright-LV95.json  swissgeo.catalog  tiles.json
ogc-records/collections/: ch.agroscope.abschaetzung-organische_boeden  ch.agroscope.amphibien-ausbreitungskarten_alytes_obstetricans  ch.agroscope.amphibien-ausbreitungskarten_bombia_variegata  ch.agroscope.amphibien-ausbreitungskarten_epidalea_calamita  ch.agroscope.amphibien-bedeutung_parzellen  (+887 more)
test-utils/: h3-stub.ts  nuxt-imports-stub.ts  vue-i18n-stub.ts
tests/: merge-unit-lcov.mjs
(+441 files in other folders)
